--- a/default.css
+++ b/default.css
@@ -152,8 +152,8 @@ body {
 	width: 960px;
 	margin: 0 auto;
 	padding: 20px 0px;
-	border-top: 1px solid #252726;
-	color: #000000;
+	border-top: 2px solid #A9BDBA;
+	color: #A9BDBA;
 }
 
 #footer p {
